@@ -47,6 +47,7 @@ hockeypuck (1.0~a1) precise; urgency=low
   * hkp_types.go, pgp.go, server.go, worker.go:
     - Implement /pks/hashquery to support SKS recovery & catchup.
       LP: #1197618
+    - Added sks-hashquery utility to determine protocol.
 
   [ Evan Broder ]
   * Makefile, mgo/client.go, mgo/worker.go:
